# photo-portfolio

./: .deployignore  .dockerignore  .editorconfig  .gitattributes  .gitignore  .netlifyignore  .pre-commit-config.yaml  .windsurfrules  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Google_site.md  README.md  SECURITY.md  api.md  cloudbuild.yaml  deploy_static_gcs.sh  deployment plan.md  features.md  game.js  gcs-cors.json  global_rules.md  index.html  netlify.toml  product.md  project plan.md  pyproject.toml  styles.css  todo.md  windsurf_deployment.yaml
.github/workflows/: ci-cd.yml  deploy.yml  gh-pages-deploy.yml  main.yml
backend/: DEPLOYMENT.md  Dockerfile  README.md  app.py  auto_annotate.py  db_credentials.txt  docker-compose.prod.yml  docker-compose.yml  metadata.db  netlify.toml  pyproject.toml  requirements-dev.txt  requirements-minimal.txt  requirements-test.txt  requirements.txt  reset_database.py  reset_db.py  run_test.py  search.py  test_db_connection.py  test_upload.py
backend/app/: __init__.py  config.py  database.py  main.py  schemas.py  security.py
backend/app/models/: __init__.py  folder.py  photo.py  user.py
backend/app/routes/: folders.py  photos.py
backend/app/utils/: __init__.py  gcs.py  secrets.py
backend/migrations/: env.py
backend/migrations/versions/: 02812419dac5_add_storage_path_to_photos_table.py
backend/scripts/: .env.example  README.md  cloud-sql-proxy.sh  db-admin.sh  db-migrate.sh  deploy.sh  dev.sh  reindex_gcs.sh  setup_dev.sh  test-db-admin.sh  verify_deployment.sh
backend/tests/: conftest.py  test_config.py  test_config_system.py  test_database_operations.py  test_folder_delete.py  test_health.py  test_models.py  test_root.py
deployment/: SECRETS.md
deployment/scripts/: requirements.txt  setup_secrets.py
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md
frontend/: Dockerfile  nginx.conf  package.json  windsurf_deployment.yaml
frontend/src/: App.css  App.js
frontend/src/components/: AdminPanel.js  GalleryView.js  GalleryView.test.js  LargeBatchUpload.js  LightboxModal.js
scripts/: build_and_deploy.sh
terraform/: .gitignore  README.md  versions.tf
terraform/modules/cloud_run/: main.tf  outputs.tf  variables.tf
terraform/modules/cloud_sql/: main.tf  outputs.tf  variables.tf
terraform/modules/cloud_storage/: main.tf  outputs.tf  variables.tf
terraform/modules/vpc/: main.tf  outputs.tf  variables.tf
terraform/production/: README.md  backend.tf  data.tf  locals.tf  main.tf  main.tf.new  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf  versions.tf
terraform/staging/: main.tf  outputs.tf  variables.tf
