[tool.poetry]
name = "photo-portfolio-backend"
version = "0.1.0"
description = "Photo Portfolio Backend Service"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"
flask-cors = "^4.0.0"
google-cloud-storage = "^2.10.0"
google-cloud-vision = "^3.4.6"
google-cloud-secret-manager = "^2.16.2"
sqlalchemy = "^2.0.20"
psycopg2-binary = "^2.9.7"
pillow = "^10.0.0"
exifread = "^3.0.0"
geopy = "^2.3.0"
gunicorn = "^21.2.0"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
numpy = "^1.25.0"
sentence-transformers = "^2.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=app --cov-report=term-missing"
